# river5

./: .gitignore  BRANCH_NOTES.md  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  README.md  WAKEUP_SUMMARY.md  build.rs
bench/: file.c  hashes.c  hashes.h  main.c  micro.c  mt_aggregate.sh  timing.h
csrc/: river5.c  river5_aesni.c  river5_aesni_v10.c  river5_aesni_v11.c  river5_aesni_v12.c  river5_aesni_v13.c  river5_aesni_v13c.c  river5_aesni_v14.c  river5_aesni_v15.c  river5_aesni_v15p.c  river5_aesni_v2.c  river5_aesni_v3.c  river5_aesni_v4.c  river5_aesni_v5.c  river5_aesni_v6.c  river5_aesni_v7.c  river5_aesni_v8.c  river5_aesni_v9.c  river5_internal.h  river5_stub.c
docs/: TAGS.md  v0.3.x-cold-cache-investigation.md
include/: river5.h
scripts/: run_smhasher3.sh
src/: lib.rs
test/: quality.c
